client/src/pages/bodyStyle.css
body {}

#playContainer {
  overflow: hidden;
}

@media screen and (max-width: 1810px) {
  #playContainer {
    zoom: 0.9;
    -moz-transform: scale(0.78);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1700px) {
  #playContainer {
    zoom: 0.94;
    -moz-transform: scale(0.78);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1590px) {
  #playContainer {
    zoom: 0.79;
    -moz-transform: scale(0.65);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1460px) {
  #playContainer {
    zoom: 0.705;
    -moz-transform: scale(0.65);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1330px) {
  #playContainer {
    zoom: 0.65;
    -moz-transform: scale(0.55);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1235px) {
  #playContainer {
    zoom: 0.605;
    -moz-transform: scale(0.55);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1140px) {
  #playContainer {
    zoom: 0.57;
    -moz-transform: scale(0.50);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1080px) {
  #playContainer {
    zoom: 0.53;
    -moz-transform: scale(0.50);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1000px) {
  #playContainer {
    zoom: 0.5;
    -moz-transform: scale(0.45);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (min-width: 2300px) {
  #formContainer {
    zoom: 1.1;
    -moz-transform: scale(1.1);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1450px) {
  #formContainer {
    zoom: 0.7;
    -moz-transform: scale(0.7);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1550px) {
  #userProfile {
    zoom: .8;
    -moz-transform: scale(0.8);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1230px) {
  #userProfile {
    zoom: .7;
    -moz-transform: scale(0.7);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 1080px) {
  #userProfile {
    zoom: .6;
    -moz-transform: scale(0.6);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 940px) {
  #userProfile {
    zoom: .5;
    -moz-transform: scale(0.5);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 790px) {
  #userProfile {
    zoom: .4;
    -moz-transform: scale(0.4);
    -moz-transform-origin: 0 0;
  }
}

@media screen and (max-width: 640px) {
  #userProfile {
    zoom: .3;
    -moz-transform: scale(0.4);
    -moz-transform-origin: 0 0;
  }
}

